--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-addons-transition-group": "15.0.1",
     "react-addons-update": "15.0.1",
     "react-dom": "15.0.1",
+    "react-komposer": "1.8.0",
     "react-mounter": "1.2.0"
   }
 }
