--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alex Hannan",
   "license": "ISC",
   "dependencies": {
+    "moment": "2.12.0",
     "react": "15.0.1",
     "react-addons-create-fragment": "15.0.1",
     "react-addons-css-transition-group": "15.0.1",
